Added config, fixed missing user email in header, improved translation

--- a/appdev_project2/src/main/resources/templates/account.html
+++ b/appdev_project2/src/main/resources/templates/account.html
@@ -14,7 +14,7 @@
             <h1 th:text="#{header.jobAds}">JOB ADVERTISEMENTS</h1>
         </div>
         <div class="logout">
-            <h4 th:text="#{header.hello}">Hello <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
+            <h4><span th:text="#{header.hello}">Hello</span> <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
             <a th:href="@{'/logout'}"><button th:text="#{header.logout}">Log Out</button></a>
         </div>
     </header>
@@ -58,6 +58,10 @@
 	        </form>
         </div>
     </main>
+    <footer>
+    	<a th:href="@{/user/} + ${user.userId} + '?lang=en'" th:text="#{lang.english}"/>
+    	<a th:href="@{/user/} + ${user.userId} + '?lang=pl'" th:text="#{lang.polish}"/>
+    </footer>
 </body>
 
 </html>
