--- a/appdev_project2/src/main/resources/static/css/index.css
+++ b/appdev_project2/src/main/resources/static/css/index.css
@@ -7,10 +7,13 @@ header {
     border: black, solid, 3px;
 }
 
+body{
+    background-color: #f5fff0;
+}
+
 main{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+    width: 80%;
     padding: 40px;
 }
 .head{
@@ -62,6 +65,42 @@ h1{
     border: 0px;
     transition-duration:0.5s;
 }
+
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+table{
+    align-items: center;
+    width: 100%;
+}
+
+footer{
+    position:absolute;
+    bottom:0;
+    right:0;
+    background-color: red;
+}
 .view{
-    border:2px solid  rgb(26,140,255);
+    text-decoration: none;
+}
+.view:checked{
+    color:black;
+    text-decoration: none;
+}
+.view:visited{
+    text-decoration: none;
+}
+a{
+    color:black;
+    text-decoration: none;
+}
+a:visited{
+    color: black;
+    text-decoration: none;
 }
