--- a/appdev_project2/src/main/resources/templates/account.html
+++ b/appdev_project2/src/main/resources/templates/account.html
@@ -58,9 +58,11 @@
 	        </form>
         </div>
     </main>
-    <footer>
-    	<a th:href="@{/user/} + ${user.userId} + '?lang=en'" th:text="#{lang.english}"/>
-    	<a th:href="@{/user/} + ${user.userId} + '?lang=pl'" th:text="#{lang.polish}"/>
+   <footer>
+        <p th:text="#{footer.language} ">Language</p>   
+    	<a class="language" th:href="@{/index} + '?lang=en'" th:text="#{lang.english} "/>
+        <p>/</p>
+    	<a class="language" th:href="@{/index} + '?lang=pl'" th:text="#{lang.polish} "/>
     </footer>
 </body>
 
