--- a/appdev_project2/src/main/resources/static/css/index.css
+++ b/appdev_project2/src/main/resources/static/css/index.css
@@ -85,22 +85,39 @@ footer{
     bottom:0;
     right:0;
     background-color: red;
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    align-items: center;
+}
+
+.email{
+    color:black;
+    text-decoration: none;
+}
+.email:checked{
+    color:black;
+    text-decoration: none;
+}
+.email:visited{
+    color:black;
+    text-decoration: none;
 }
 .view{
-    text-decoration: none;
+    color:dodgerblue;
+    text-decoration: dodgerblue;
 }
-.view:checked{
+
+.language{
     color:black;
     text-decoration: none;
 }
-.view:visited{
-    text-decoration: none;
-}
-a{
+.language:checked{
     color:black;
     text-decoration: none;
 }
-a:visited{
-    color: black;
+.language:visited{
+    color:black;
     text-decoration: none;
 }
+
