--- a/appdev_project2/src/main/resources/templates/register.html
+++ b/appdev_project2/src/main/resources/templates/register.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/register.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -48,14 +47,14 @@
             </p>
             <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{register.submit}">Register</button>
         </form>
-    </div>
-    
+    </div> 
 </body>
-<footer>
-    <p th:text="#{footer.language} ">Language</p>   
-    <a class="language" th:href="@{/index} + '?lang=en'" th:text="#{lang.english} "/>
-    <p>/</p>
-    <a class="language" th:href="@{/index} + '?lang=pl'" th:text="#{lang.polish} "/>
+    
+<footer style="position:absolute; bottom:0; right:0; background-color: red; display: flex; flex-direction: row; font-size: 20px; ">
+    <p style="align-items: center" th:text="#{footer.language} ">Language</p>   
+    <a class="language" style="color:black; text-decoration: none;" th:href="@{/index} + '?lang=en'" th:text="#{lang.english} "/>
+    <p style="align-items: center">/</p>
+    <a class="language" style="color:black; text-decoration: none;" th:href="@{/index} + '?lang=pl'" th:text="#{lang.polish} "/>
 </footer>
 
 </html>
